# pyso

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  setup.py
.gitlab/ci/: Containerfile  build.yml  container.yml  security.yml  test.yml
caseStudies/airQuality/: AQI.ipynb  CEJST.ipynb  FresnoAQI.ipynb  FullButteAQI.ipynb  GaussianDispersionModeling.ipynb  Jackson.ipynb  KernAQI.ipynb  Klamath.ipynb  LAAQI.ipynb  README.md  SanJ.ipynb  Tulare.ipynb
data_model_tests/: README.md  investigate_solution.py  sim_rts_gmlc_save_egret_test.py  test_count_onoff.py  test_energymarket.py  test_gvparser.py  test_rt_market.py  uc_test_example.py
data_model_tests/data_files/: bad_ruc.json  gmlc_model_setup.json  ruc_modeldata0.json  sced_modeldata0.json  sced_modeldata1.json  sced_modeldata10.json  sced_modeldata11.json  sced_modeldata12.json  sced_modeldata13.json  sced_modeldata14.json  sced_modeldata15.json  sced_modeldata16.json  sced_modeldata17.json  sced_modeldata18.json  sced_modeldata19.json  sced_modeldata2.json  sced_modeldata20.json  sced_modeldata21.json  sced_modeldata22.json  sced_modeldata23.json  sced_modeldata3.json  sced_modeldata4.json  sced_modeldata5.json  sced_modeldata6.json  sced_modeldata7.json  sced_modeldata8.json  sced_modeldata9.json
data_model_tests/rts_gmlc_output/: bus_detail.csv  daily_summary.csv  hourly_gen_summary.csv  hourly_summary.csv  line_detail.csv  overall_simulation_output.csv  renewables_detail.csv  reserves_detail.csv  runtimes.csv  thermal_detail.csv
data_model_tests/rts_gmlc_output/prescient_egret_json/: ruc_modeldata0.json  ruc_solved_modeldata0.json  sced_modeldata0.json  sced_modeldata1.json  sced_modeldata10.json  sced_modeldata11.json  sced_modeldata12.json  sced_modeldata13.json  sced_modeldata14.json  sced_modeldata15.json  sced_modeldata16.json  sced_modeldata17.json  sced_modeldata18.json  sced_modeldata19.json  sced_modeldata2.json  sced_modeldata20.json  sced_modeldata21.json  sced_modeldata22.json  sced_modeldata23.json  sced_modeldata3.json  sced_modeldata4.json  sced_modeldata5.json  sced_modeldata6.json  sced_modeldata7.json  sced_modeldata8.json  sced_modeldata9.json  sced_pricing_modeldata0.json  sced_pricing_modeldata1.json  sced_pricing_modeldata10.json  sced_pricing_modeldata11.json  sced_pricing_modeldata12.json  sced_pricing_modeldata13.json  sced_pricing_modeldata14.json  sced_pricing_modeldata15.json  sced_pricing_modeldata16.json  sced_pricing_modeldata17.json  sced_pricing_modeldata18.json  sced_pricing_modeldata19.json  sced_pricing_modeldata2.json  sced_pricing_modeldata20.json  (+34 more)
docs/: pyenergymarket_classes.drawio
src/pyenergymarket/: __init__.py  engine.py  gvdefaults.py  gvparser.py  osw_da_market.py  osw_market.py  osw_reserves_market.py  osw_rt_market.py  pyenergymarket_defaults.py
src/pyenergymarket/gvparser/: README.md  __init__.py  ancilliary_services.py  branches.py  dist_gen.py  gen_hydro.py  gen_other.py  gen_renewable.py  gen_storage.py  gen_thermal.py  gvdefaults.py  topology_management.py
src/pyenergymarket/marketmodels/: da_market.py  default_tso_config.py  market.py  marketutils.py  osw_da_market.py  osw_market.py  osw_operator.py  osw_reserves_market.py  osw_rt_market.py  reserves_market.py  rt_market.py  run_tso.py  run_tso_naerm.py  settings.json  settings.py
src/pyenergymarket/marketmodels/archive/: README.md  da_market.py  rt_market.py  run_tso_dart.py
src/pyenergymarket/parsers/: README.md  egretparser.py  gvparser.py  naermparser.py  pwparser.py
src/pyenergymarket/pwparser/: README.md  __init__.py  pwdefaults.py
src/pyenergymarket/utils/: README.md  __init__.py  egretutils.py  ioutils.py  timeutils.py
src/pyso/: engine.py
src/pyso/marketmodels/: default_tso_config.py  market.py  marketutils.py  run_tso.py
src/pyso/marketmodels/archive/: README.md  run_tso_dart.py
src/pyso/parsers/: egretparser.py  gvparser.py  naermparser.py  pwdefaults.py  pwparser.py
src/pyso/utils/: ioutils.py
tests/: README.md  conftest.py  test_acpfmodel.py  test_energymarket.py  test_fuelcurve.py  test_market.py  test_markettiming.py  test_naermparser.py  test_simplemarket.py  test_simplemarket_energymarketonly.py  test_simplemarket_tz.py  test_weekmarket.py  utilities.py
tests/testdata/: test_market_results_0.json  test_market_results_1.json  test_market_results_2.json  test_market_results_3.json  tiny_uc_2.json  tiny_uc_2_ET.json  week_uc_2.json
